# pdf-merger

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/pdf_merger/: __init__.py  _cli.py
tests/: test_cli.py  test_pdf_merger.py
